Thesis/ws/log/build_2023-05-07_20-01-48/locomotion_core/stderr.log
  File "/home/rsl/Desktop/Indoor_Mobile_Robotic_Arm/Thesis/ws/install/locomotion_core/lib/python3.8/site-packages/locomotion_core/RoverDescription.py", line 9
    def __init__(self, name='RobArm', robot_measurement):
                 ^
SyntaxError: non-default argument follows default argument

  File "/home/rsl/Desktop/Indoor_Mobile_Robotic_Arm/Thesis/ws/install/locomotion_core/lib/python3.8/site-packages/locomotion_core/rover_state_controller.py", line 13
    import ./RoverDescription as Rover
           ^
SyntaxError: invalid syntax

